Add introduction - tracking protection

--- a/404.html
+++ b/404.html
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1574761573" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1574761573" rel="stylesheet">
-    <link href="/css/hybrid.css?1574761573" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1574761573" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1574761573" rel="stylesheet">
-    <link href="/css/theme.css?1574761573" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1574761573" rel="stylesheet">
+    <link href="/css/nucleus.css?1574773462" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1574773462" rel="stylesheet">
+    <link href="/css/hybrid.css?1574773462" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1574773462" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1574773462" rel="stylesheet">
+    <link href="/css/theme.css?1574773462" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1574773462" rel="stylesheet">
     
-      <link href="/css/theme-blue.css?1574761573" rel="stylesheet">
+      <link href="/css/theme-blue.css?1574773462" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -33,6 +33,21 @@
     ul {
       list-style-type: none;
     }
+</style>
+<style type="text/css">
+  figure.left-align {
+      display: inline-block;
+      margin: 1rem;
+  }
+  figure.left-align img {
+      margin: 1rem auto !important;
+  }
+  figure.left-align h4 {
+      margin-top: 0 !important;
+  }
+  blockquote p {
+      color: #666 !important;
+  }
 </style>
 
 </head>
