Fix image width

--- a/404.html
+++ b/404.html
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1575379577" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1575379577" rel="stylesheet">
-    <link href="/css/hybrid.css?1575379577" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1575379577" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1575379577" rel="stylesheet">
-    <link href="/css/theme.css?1575379577" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1575379577" rel="stylesheet">
+    <link href="/css/nucleus.css?1575379933" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1575379933" rel="stylesheet">
+    <link href="/css/hybrid.css?1575379933" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1575379933" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1575379933" rel="stylesheet">
+    <link href="/css/theme.css?1575379933" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1575379933" rel="stylesheet">
     
-      <link href="/css/theme-blue.css?1575379577" rel="stylesheet">
+      <link href="/css/theme-blue.css?1575379933" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -38,6 +38,7 @@
   figure.left-align {
       display: inline-block;
       margin: 1rem;
+      max-width: 1024px;
   }
   figure.left-align img {
       margin: 1rem auto !important;
@@ -47,7 +48,7 @@
   }
   figure img {
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1) !important;
-      max-width: 1024px;
+      max-width: 100%;
   }
   blockquote p {
       color: #666 !important;
