--- a/404.html
+++ b/404.html
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1575379933" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1575379933" rel="stylesheet">
-    <link href="/css/hybrid.css?1575379933" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1575379933" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1575379933" rel="stylesheet">
-    <link href="/css/theme.css?1575379933" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1575379933" rel="stylesheet">
+    <link href="/css/nucleus.css?1575391840" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1575391840" rel="stylesheet">
+    <link href="/css/hybrid.css?1575391840" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1575391840" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1575391840" rel="stylesheet">
+    <link href="/css/theme.css?1575391840" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1575391840" rel="stylesheet">
     
-      <link href="/css/theme-blue.css?1575379933" rel="stylesheet">
+      <link href="/css/theme-blue.css?1575391840" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -75,6 +75,12 @@
   }
   a[href="#toc"] {
       color: #000;
+  }
+  @media screen and (max-width: 500px) {
+      #toc {
+	  float: none;
+	  margin: 10px 0;
+      }
   }
 </style>
 
