--- a/404.html
+++ b/404.html
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1575551584" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1575551584" rel="stylesheet">
-    <link href="/css/hybrid.css?1575551584" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1575551584" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1575551584" rel="stylesheet">
-    <link href="/css/theme.css?1575551584" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1575551584" rel="stylesheet">
+    <link href="/css/nucleus.css?1575977394" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1575977394" rel="stylesheet">
+    <link href="/css/hybrid.css?1575977394" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1575977394" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1575977394" rel="stylesheet">
+    <link href="/css/theme.css?1575977394" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1575977394" rel="stylesheet">
     
-      <link href="/css/theme-blue.css?1575551584" rel="stylesheet">
+      <link href="/css/theme-blue.css?1575977394" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -81,6 +81,20 @@
 	  float: none;
 	  margin: 10px 0;
       }
+  }
+  .temp-brave {
+      background: url('/images/browser-icons/brave.png');
+      padding-left: 22.8px;
+      background-repeat: no-repeat;
+  }
+  .active .temp-brave {
+      filter: invert(1);
+  }
+  #cs th:first-child {
+      width: 10%;
+  }
+  #cs th:not(:first-child) {
+      width: 18%;
   }
 </style>
 
