Clarify Safari 1P non-cookie storage behavior

--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <td><a href="/cliqz/#other-first-party-storage" rel="footnote" class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/edge/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
 <td><a href="/firefox/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> No restrictions.</td>
-<td><a href="/safari/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Restricted to 7 days maximum storage on pages with URL decoration (query parameters or fragments) when referring domain is a known tracker.</td>
+<td><a href="/safari/#other-first-party-storage" rel="footnote"  class="fa fa-info-circle"></a> Restricted to 7 days since last interaction (click, tap, text input) on pages with URL decoration (query parameters or fragments) when referring domain is a known tracker.</td>
 </tr>
 <tr>
 <td align="right"><strong>Referrer</strong></td>
