Revert Safari bubbling under

--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <h3 id="bubbling-under">Bubbling under</h3>
 <ul>
 <li>Brave: Cap all script-writable storage to a maximum lifetime (<a href="https://github.com/brave/brave-browser/issues/4438">link to issue</a>)</li>
+<li>Safari: <a href="https://trac.webkit.org/changeset/251467/webkit">Block all third-party cookies</a></li>
 <li>Safari: <code>isLoggedIn</code> (<a href="https://lists.w3.org/Archives/Public/public-webappsec/2019Sep/0004.html">original explainer</a> and <a href="https://trac.webkit.org/changeset/250944/webkit">WebKit changeset for experimental feature</a>)</li>
 <li>Safari: Expire non-cookie website data in 7 days since last user interaction (<a href="https://trac.webkit.org/changeset/253082/webkit">WebKit changeset</a>)</li>
 <li>Firefox, Edge, Chrome: <a href="https://www.chromestatus.com/feature/6251880185331712"><code>strict-origin-when-cross-origin</code> default referrer policy</a></li>
