--- a/index.html
+++ b/index.html
@@ -1198,9 +1198,9 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><a href="/brave/" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Removes known tracking parameters from URL query strings.</span></td>
+<td><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Removes known tracking parameters from URL query strings.</span></td>
 <td>n/a</td>
-<td><a href="/cliqz/" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
+<td><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
 <td>n/a</td>
 <td>n/a</td>
 <td>n/a</td>
