--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser's own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 18 December 2019</p>
+<p><strong>Last updated</strong>: 8 January 2020</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -1202,7 +1202,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <td>n/a</td>
 <td><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
 <td>n/a</td>
-<td>n/a</td>
+<td><a href="/firefox/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Automatically block requests to tracking domains that are also listed in the Fingerprinting category of the Disconnect.me list.</span></td>
 <td>n/a</td>
 </tr>
 </tbody>
