Add client-side request to Safari bubbling under

--- a/index.html
+++ b/index.html
@@ -923,8 +923,10 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </div>
 
 <h3 id="bubbling-under">Bubbling under</h3>
+<p><strong>Last updated</strong>: 10 January 2020</p>
 <ul>
 <li>Brave: Cap all script-writable storage to a maximum lifetime (<a href="https://github.com/brave/brave-browser/issues/4438">link to issue</a>)</li>
+<li>Safari: Treat programmatically initiated client-side redirects that happen within 5 seconds after page load as redirects for ITP purposes (<a href="https://trac.webkit.org/changeset/254296/webkit">WebKit changeset</a>)</li>
 <li>Safari: <a href="https://trac.webkit.org/changeset/251467/webkit">Block all third-party cookies</a></li>
 <li>Safari: <code>isLoggedIn</code> (<a href="https://lists.w3.org/Archives/Public/public-webappsec/2019Sep/0004.html">original explainer</a> and <a href="https://trac.webkit.org/changeset/250944/webkit">WebKit changeset for experimental feature</a>)</li>
 <li>Safari: Expire non-cookie website data in 7 days since last user interaction (<a href="https://trac.webkit.org/changeset/253082/webkit">WebKit changeset</a>)</li>
